--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
   </head>
 
   <body>
+
+    <!----Title and button for random quotes generater-->
     <header>
       <h1>Random Quotes</h1>
       <button id="load-quote" class="load-quote">Show another quote</button>
     </header>
 
+    <!----Section that displays the random quotes-->
     <div class="container">
       <div id="quote-box" class="quote-box">
         <p class="quote">Every great developer you know got there by solving problems they were unqualified to solve until they actually did it.</p>
